# barSmash

./: CMakeLists.txt  README.md
headers/: Actor.h  Ball.h  Bar.h  Brick.h  MyWindow.h
sources/: MyWindow.cpp  main.cpp
